# mini-excel

./: .gitignore  CMakeLists.txt  HOWTO.md  HOWTOBUILD.md  README.md  command.h  common.h  compile.h  compile_commands.json  list.h  method.h  table.h
src/: CMakeLists.txt  command.c  command.h  common.c  common.h  compile.c  compile.h  list.c  list.h  main.c  method.c  method.h  table.c  table.h
